<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Calendar 2014</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="titleMenu">Menu</string>
    <string name="loginButton">Login</string>
    <string name="calendarButton">Calendar</string>
    <string name="createEventButton">Create Event</string>
    <string name="devButton">Developers</string>
    <string name="backButton">Back</string>
    <string name="goButton">Go</string>
    <string name="desc">desc</string>
    <string name="go">Go</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="event_saved">Event Saved!</string>
    <string name="app_id">716751798347879</string>
    <string name="title_activity_facebook_fragment">FacebookFragment</string>
    <string name="tag_button">&quot;Tag:&quot;</string>
    <string name="tag_search_button">Search Tags</string>
    <string name="description_string">Description</string>
    <string name="save_event_string">Save Event</string>
    <string name="login_button">Login</string>
    <string name="time_string">Time</string>
    <string name="date_string">Date</string>
    <string name="location_string">Location</string>
    <string name="tag_string">Tag</string>

</resources>
