<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Menu"
     >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleMenu"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button2"
            style="@style/Buttons"
            android:onClick="calendarAction"
            android:text="@string/calendarButton" />

        <Button
            android:id="@+id/button3"
            style="@style/Buttons"
            android:onClick="createEventAction"
            android:text="@string/createEventButton" />
        
        <Button
            android:id="@+id/tagSearchButton"
            style="@style/Buttons"
            android:onClick="tagSearchAction"
            android:text="@string/tag_search_button"/>
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button4"
            style="@style/MiniButtons"
            android:onClick="devAction"
            android:text="@string/devButton" />

    </LinearLayout>

</LinearLayout>